// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-next view renderer HeaderSection should render the HeaderSection UI component 1`] = `
<HeaderSection
  id="header"
>
  <Component />
</HeaderSection>
`;

exports[`navigation-next view renderer ItemsRenderer should render items correctly 1`] = `
Array [
  <HeaderSection
    customComponents={
      Object {
        "Corgie": [Function],
      }
    }
    id="headerSection"
    items={Array []}
    key="headerSection"
  />,
  <MenuSection
    customComponents={
      Object {
        "Corgie": [Function],
      }
    }
    id="menuSection"
    items={Array []}
    key="menuSection"
  />,
  <ConnectedItem
    id="item"
    index={2}
    key="item"
  />,
  <BackItem
    id="back-item"
    index={3}
    key="back-item"
    text="Back"
  />,
  <WithNavigationViewController(GoToItem)
    goTo="view"
    id="goto-item"
    index={4}
    key="goto-item"
  />,
  <WithAnalyticsContext(WithAnalyticsEvents(InlineCustom))
    components={
      Object {
        "BackItem": [Function],
        "ContainerHeader": [Function],
        "Debug": [Function],
        "GoToItem": [Function],
        "Group": [Function],
        "GroupHeading": [Function],
        "HeaderSection": [Function],
        "Item": [Function],
        "MenuSection": [Function],
        "Section": [Function],
        "SectionHeading": [Function],
        "Separator": [Function],
        "SortableContext": [Function],
        "SortableGroup": [Function],
        "SortableItem": [Function],
        "Switcher": [Function],
        "Wordmark": [Function],
      }
    }
    customComponents={
      Object {
        "Corgie": [Function],
      }
    }
    id="inlineCustom"
    index={5}
    key="inlineCustom"
  />,
  <WithAnalyticsContext(WithAnalyticsEvents(Corgie))
    components={
      Object {
        "BackItem": [Function],
        "ContainerHeader": [Function],
        "Debug": [Function],
        "GoToItem": [Function],
        "Group": [Function],
        "GroupHeading": [Function],
        "HeaderSection": [Function],
        "Item": [Function],
        "MenuSection": [Function],
        "Section": [Function],
        "SectionHeading": [Function],
        "Separator": [Function],
        "SortableContext": [Function],
        "SortableGroup": [Function],
        "SortableItem": [Function],
        "Switcher": [Function],
        "Wordmark": [Function],
      }
    }
    customComponents={
      Object {
        "Corgie": [Function],
      }
    }
    id="corgie"
    index={6}
    key="corgie"
  />,
]
`;

exports[`navigation-next view renderer MenuSection should render the MenuSection UI component 1`] = `
<MenuSection
  alwaysShowScrollHint={false}
  id="menu"
>
  <Component />
</MenuSection>
`;

exports[`navigation-next view renderer SortableContext should render the SortableContext UI component 1`] = `
<LoadableComponent
  id="sortable"
  onDragEnd={[Function]}
>
  <TypedItemsRenderer
    items={
      Array [
        Object {
          "id": "sortable-group",
          "items": Array [
            Object {
              "id": "backlog",
              "index": 3,
              "text": "Backlog",
              "type": "SortableItem",
            },
            Object {
              "id": "active-sprints",
              "index": 1,
              "text": "Active sprints",
              "type": "SortableItem",
            },
            Object {
              "id": "issues",
              "index": 2,
              "text": "Issues",
              "type": "SortableItem",
            },
          ],
          "type": "SortableGroup",
        },
      ]
    }
  />
</LoadableComponent>
`;

exports[`navigation-next view renderer SortableGroup should render the SortableGroup UI Component 1`] = `
<LoadableComponent
  heading="Sortable Group"
  id="sortable-group"
>
  <RenderBlocker
    blockOnChange={false}
    items={
      Array [
        Object {
          "id": "backlog",
          "index": 0,
          "text": "Backlog",
          "type": "SortableItem",
        },
        Object {
          "id": "active-sprints",
          "index": 1,
          "text": "Active sprints",
          "type": "SortableItem",
        },
        Object {
          "id": "issues",
          "index": 2,
          "text": "Issues",
          "type": "SortableItem",
        },
      ]
    }
  >
    <TypedItemsRenderer
      items={
        Array [
          Object {
            "id": "backlog",
            "index": 0,
            "text": "Backlog",
            "type": "SortableItem",
          },
          Object {
            "id": "active-sprints",
            "index": 1,
            "text": "Active sprints",
            "type": "SortableItem",
          },
          Object {
            "id": "issues",
            "index": 2,
            "text": "Issues",
            "type": "SortableItem",
          },
        ]
      }
    />
  </RenderBlocker>
</LoadableComponent>
`;
